[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "company-intel"
version = "0.1.0"
description = "Self-healing company intelligence pipeline"
dependencies = [
    "langchain",
    "langchain-google-genai",
    "langchain-groq",
    "langchain-openai",
    "langgraph",
    "pydantic",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
